# Projekt-1-semester

./: CMakeLists.txt  README.md  data_read.c  travel_cal.c
P1---train-vs-planes-49a0f9c494bc90a9495f52d723424dd52ae744dd/: README.md
P1---train-vs-planes-49a0f9c494bc90a9495f52d723424dd52ae744dd/src/: CMakeLists.txt  data_11Stations_hours.txt  data_4Stations_hours.txt  data_6Stations_hours.txt  main.c  plane_time_comparison.c  route_cal.h  user_inputs.c  user_inputs.h
src/: CMakeLists.txt  Scan_data.c  Scan_data.h  data.txt  data_11Stations_minutes.txt  data_2.txt  data_6Stations_hours.txt  main.c  my_data.txt  plane_data.txt  plane_time_comparison.c  route_cal.c  route_cal.h  travel_cal.c  user_inputs.c  user_inputs.cpp  user_inputs.h
